# python-boilerplate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
backend/: main.py
infra/terraform/: backend.tf  create_backend.sh  main.tf  variables.tf
infra/terraform/resources/: google_cloud_run.tf  variables.tf
src/: main.py
tests/: test_main.py
