[tool.poetry]
name = "<project name>"
version = "0.1.0"
description = "<project description>"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poe.tasks]
app = "poetry run python src/main.py"
format = "poetry run ruff format"
lint_and_fix = "poetry run ruff_check --fix"
lint = "poetry run ruff check"
type_check = "poetry run mypy src/ --disallow-untyped-defs --disallow-incomplete-defs"
style = ["lint_and_fix", "format", "type_check"]
test = "poetry run pytest tests/"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.28.0"
ruff = "^0.6.3"
mypy = "^1.11.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
